[package]
name = "wei-sd"
version = "0.1.0"
edition = "2021"
description = "一键安装stable diffusion web-ui，调用api接口，检查api接口，卸载软件"
documentation = "https://github.com/zuiyue-com/wei-sd"
homepage = "https://github.com/zuiyue-com/wei-sd"
license = "MIT OR Apache-2.0"

[dependencies]
wei-env = "0.2.4"
wei-log = "0.2.8"
tokio = { version = "1.28", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.11.18", features = ["json"] }
base64 = "0.13"